# Zephyr-BOS-Manifest

./: CMakeLists.txt  Kconfig  README.md  west.yml
BOS/: CMakeLists.txt
BOS/include/: BOS.h  BOS_MsgCodes.h  BOS_RTOS.h
BOS/src/: BOS.c  BOS_Messaging.c  BOS_MsgParser.c  BOS_RTOS.c  MsgParser.c
Hexabitz_Drivers/: CMakeLists.txt
Hexabitz_Drivers/UART/: UART.c  UART.h
Hexabitz_Modules/: CMakeLists.txt
Hexabitz_Modules/H01R0/: CMakeLists.txt
Hexabitz_Modules/H01R0/include/: H01R0.h
Hexabitz_Modules/H01R0/src/: H01R0.c
Hexabitz_Modules/H0BR4/: CMakeLists.txt
Hexabitz_Modules/H0BR4/include/: H0BR4.h
Hexabitz_Modules/H0BR4/src/: H0BR4.c
app/: CMakeLists.txt  prj.conf
app/src/: main.c
boards/Hexabitz/H01R0/: H01R0-pinctrl.dtsi  H01R0.dts  H01R0.yaml  H01R0_defconfig  Kconfig.H01R0  README.md  board.cmake  board.yml  pre_dt_board.cmake
dts/bindings/: vendor-prefixes.txt
dts/bindings/BOS/: BOS.yaml
dts/bindings/hexabitz/: port-mapping.yaml
